# meltria-analyzer

./: .env  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
diagnoser/: PC.py  call_graph.py  causalrca.py  cnn_model.py  diag.py  metric_node.py  pcalg.py  pyrca.py  rcd.py
diagnoser/causalgraph/: causallearn_cit_fisherz_patch.py  cdt_PC_patch.py  pcalg.py  pcalg_patch.py
diagnoser/citest/: fisher_z.py  fisher_z_pgmpy.py  pearsonr.py
diagnoser/daggnn/: config.py  modules.py  utils.py
eval/: groundtruth.py  labeling.py  localizaiton_score.py  localization.py  tsdr.py  validation.py
eval/conf/dataset/: config.yaml
eval/conf/tsdr/: config.yaml
eval/config/common/: data_params.py  tsdr_options.py  tsifter_ablation.py  tsifter_best_params.py  tsifter_params_sensitivity.py
eval/config/sweep_localization/: main_experiments.conf.py  pyrca.conf.py  sockshop_experiments.conf.py  sockshop_large.conf.py  sockshop_tiny.conf.py  ss_large.conf.py  ss_medium.conf.py  ss_medium_params_sensitivity.conf.py  ss_small.conf.py  ss_small_ablation.conf.py  ss_small_data_params.conf.py  ss_small_params_sensitivity.conf.py  trainticket_experiments.conf.py  trainticket_large.conf.py  trainticket_tiny.conf.py  tsifter_all_dataset.conf.py  tt_large.conf.py  tt_medium.conf.py  tt_small.conf.py  tt_small_ablation.conf.py  tt_small_data_params.conf.py  tt_small_params_sensitivity.conf.py
eval/config/sweep_tsdr/: default.py  main_experiments.conf.py  sockshop_ablation_study.conf.py  sockshop_data_params_sensitivity.py  sockshop_experiments.conf.py  sockshop_param_sensitivity.py  sockshop_params_sensitivity.py  sockshop_tsifter.conf.py  trainticket_ablation.py  trainticket_experiments.conf.py  trainticket_params_sensitivity.py  trainticket_tsifter.conf.py  tsifter_all_dataset.conf.py  tsifter_sockshop.conf.py  tsifter_trainticket.conf.py
eval/priorknowledge/: priorknowledge.py  sock_shop.py  train_ticket.py
eval/util/: logger.py
libnotebook/: save.py
meltria/: dataset.py  loader.py  metric_types.py
meltria/priorknowledge/: priorknowledge.py  sock_shop.py  train_ticket.py
notebooks/: anomaly_patterns.ipynb  anomaly_patterns_clustering_shape.ipynb  anomaly_patterns_loader.ipynb  causal_learn.ipynb  causalrca.ipynb  cdt_pc.ipynb  change_point_based_clustering.ipynb  chatgpt.ipynb  clusters_stat.ipynb  cnn-data-augumentation.ipynb  cnn_based_learning_anomaly_patterns.ipynb  data-labeling-tsdr-accuracy-with-cnn.ipynb  data-labeling_tsdr-accuracy.ipynb  dataset_k2h2w.ipynb  dbscan.ipynb  debug_ranking.ipynb  e-diagnosis.ipynb  eval_clustering_shape.ipynb  eval_tsdr_on_localization.ipynb  fluxinfer_rca.ipynb  fluxinfer_rca2_sockshop.ipynb  fluxinfer_rca2_trainticket.ipynb  fluxinfer_rca_only_phase1.ipynb  graphs_for_paper.ipynb  graphs_for_paper_for_combinations.ipynb  graphs_for_paper_param_sensitivity.ipynb  graphs_for_paper_param_sensitivity2.ipynb.ipynb  hdbscan.ipynb  improve_changepoint_kde.ipynb  improve_eval_metric_of_tsdr.ipynb  investigate_tsdr_and_localization_perf.ipynb  investigation_of_cause_metrics.ipynb  microdiag.ipynb  notears.ipynb  patternmatcher.ipynb  pc_based_monitorrank.ipynb  pc_based_monitorrank_trainticket.ipynb  playground_of_causality_package.ipynb  pyrca.ipynb  pyrca_simulation.ipynb  (+2 more)
notebooks/dataset/: dataset_sockshop_9n6mf.ipynb  dataset_sockshop_qknmc.ipynb  dataset_trainticket_5dsdm.ipynb  dataset_trainticket_bzlxp.ipynb  dataset_trainticket_k2h2w.ipynb  dataset_trainticket_m9dgg.ipynb  rcd_sockshop_dataset.ipynb
notebooks/materials/: aggregated_joined_df.csv  fl_results.csv  joined_df.csv  pyrca_feature_reduction_simulation_results.csv
notebooks/models/: current_best_cnn1d.pt  current_best_cnn1d.pth  current_best_cnn1d_with_da.pth  current_best_cnn1d_without_ap.pth  current_best_cnn1d_without_ap_with_da.pth
notebooks/notebooklib/: localization.py  plot.py  rank.py  save.py
samples/anomaly_patterns/: anomaly_patterns_20221018-105001.jsonl
samples/tsdr_anomaly_patterns/: labeled_tsdr_anomaly_patterns_20221202-024759.jsonl  labeled_tsdr_anomaly_patterns_20221202-024759_fixed.jsonl  labeled_tsdr_anomaly_patterns_20221210-145911.jsonl  mislabeled_tsdr_anomaly_patterns_20221122-111410.jsonl  mislabeled_tsdr_anomaly_patterns_20221128-012940.jsonl  relabeled_tsdr_anomaly_patterns_20221123-101157.jsonl  tsdr_anomaly_patterns_20221119-161017.jsonl
simulation/: feature_reduction.py  localization.py  synthetic_data.py
tests/diagnoser/: test_diag.py
tests/eval/: test_groundtruth.py  test_metric_node.py
tests/meltria/: loader.py
tests/tsdr/: test_tsdr.py
tools/: check_tsdr_metrics.py  get_datapoints_from_metrics_file.py  verify_meltria_metrics.py  verify_tsdr_univariate_model.py
tsdr/: birch.py  multireducer.py  smooth.py  tsdr.py  unireducer.py
tsdr/clustering/: changepoint.py  dbscan.py  kshape.py  metricsnamecluster.py  pearsonr.py  sbd.py
tsdr/outlierdetection/: ar.py  fluxinfer.py  knn.py  n_sigma_rule.py  residual_integral.py  spot.py
tsdr/testseries/: sockshop.py
(+11 files in other folders)
