[tool.poetry]
name = "meltria-analyzer"
version = "0.1.0"
description = ""
authors = ["tsurubee","yuuk1"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.2"
scipy = "^v1.9.1"
fastdtw = "^0.3.4"
scikit-learn = "1.0.2"
pandas = "^1.4.4"
statsmodels = "0.13.2"
matplotlib = "^3.4.2"
pcalg = "^0.2.0"
ipython = "^7.25.0"
pygraphviz = "^1.7"
pgmpy = "^0.1.15"
Jinja2 = "^3.0.1"
ruptures = "^1.1.4"
arch = "^5.0.1"
neptune-client = "^0.16.6"
pymannkendall = "^1.4.2"
pyhomogeneity = "^1.1"
pmdarima = "^1.8.4"
banpei = "^0.1.2"
hydra-core = "^1.1.2"
pyvis = "^0.1.9"
bokeh = "^2.4.2"
holoviews = "^1.14.8"
panel = "^0.12.6"
tsmoothie = "^1.0.4"
jenkspy = "^0.2.0"
pyod = "^1.0.0"
tabulate = "^0.8.10"
types-tabulate = "^0.8.11"
joblib = "^1.1.0"
pandarallel = "^1.6.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
autopep8 = "^1.7.0"
pysen = "^0.10.2"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
