[tool.poetry]
name = "meltria-analyzer"
version = "0.1.0"
description = ""
authors = ["tsurubee","yuuk1"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.2,<1.24"
scipy = "^v1.9.3"
scikit-learn = "^1.2.2"
pandas = "^1.4.4"
statsmodels = "0.13.2"
matplotlib = "^3.4.2"
pcalg = "^0.2.0"
ipython = "^7.25.0"
pygraphviz = "^1.7"
pgmpy = "^0.1.15"
Jinja2 = "^3.0.1"
ruptures = "^1.1.4"
arch = "^5.0.1"
pymannkendall = "^1.4.2"
pyhomogeneity = "^1.1"
pmdarima = "^1.8.4"
banpei = "^0.1.2"
hydra-core = "^1.1.2"
pyvis = "^0.1.9"
bokeh = "^2.4.2"
holoviews = "^1.14.8"
panel = "^0.12.6"
tsmoothie = "^1.0.4"
jenkspy = "^0.2.0"
pyod = "^1.0.0"
tabulate = "^0.8.10"
types-tabulate = "^0.8.11"
joblib = "^1.1.0"
pandarallel = "^1.6.3"
hdbscan = "^0.8.28"
ipywidgets = "^8.0.2"
jsonlines = "^3.1.0"
pytest-unordered = "^0.5.1"
tslearn = "^0.5.2"
numexpr = "^2.8.4"
h5py = "^3.7.0"
dill = "^0.3.6"
torchinfo = "^1.7.1"
seaborn = "^0.12.1"
tqdm = "^4.64.1"
pyarrow = "^10.0.1"
ads-evt = "^0.0.4"
causal-learn = "0.1.2.3"
causalnex = {url = "https://github.com/quantumblacklabs/causalnex/archive/refs/tags/v0.11.1.tar.gz"}
cdt = "^0.6.0"
jupyterlab = "^3.6.1"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
jupyter-core = "^5.3.0"
neptune = "^1.1.1"
jupyter-server = "^2.5.0"
causality = "^0.0.10"
tigramite = "^5.2.0.0"
pingouin = "^0.5.3"
scikit-network = "^0.30.0"
threadpoolctl = "^3.1.0"
lingam = "^1.7.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
autopep8 = "^1.7.0"
pysen = "^0.10.2"
black = "^22.8.0"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.pysen-cli]
settings_dir = "."

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
py_version = "py310"
line_length = 119
isort_known_first_party = ["fakes", "pysen"]
[[tool.pysen.lint.mypy_targets]]
  paths = [".", "tests/"]


[tool.black] # automatically generated by pysen
# pysen ignores and overwrites any modifications
line-length = 119
target-version = ["py310"]

[tool.isort] # automatically generated by pysen
# pysen ignores and overwrites any modifications
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["fakes", "pysen"]
line_length = 119
multi_line_output = 3
use_parentheses = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
